# naive-db

naive-database/: .gitignore  Cargo.toml
naive-database/src/: cli.rs  config.rs  defines.rs  error.rs  init.rs  main.rs  page.rs  repl.rs
naive-database/src/dbms/: aggregate.rs  database.rs  exec.rs  mod.rs  relation.rs
naive-database/src/filesystem/: file_manager.rs  mmap.rs  mod.rs  page_manager.rs  tests.rs
naive-database/src/index/: colindex.rs  fast_cmp.rs  mod.rs
naive-database/src/record/: column.rs  mod.rs  pagemanip.rs  table.rs
naive-database/src/utils/: bitmap.rs  lru.rs  mod.rs  persistence.rs  serial_cell.rs  table.rs
naive-sql-parser/: .gitignore  Cargo.toml  build.rs
naive-sql-parser/src/: ast.rs  defs.rs  lib.rs  sql.lalrpop
