[package]
name = "naive-database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.2"
rand = "0.8"

[dependencies]
naive_sql_parser = { path = "../naive-sql-parser" }
rustyline = "9.0"
lazy_static = "1.4"
fixedbitset = "0.4.0"
bimap = { version = "0.6.1", features = ["serde"] }
chrono = "0.4"
memmap = { version = "0.7.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
regex = "1.5.4"
bitflags = "1.3.2"
prettytable-rs = "0.8.0"
structopt = "0.3.25"
csv = "1.1.6"
like = "0.3.0"
num-bigint = "0.4.3"

[features]
default = ["mmap"]
mmap = ["memmap"]
